--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+ <head>
+        <title>dsd</title>
+    <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <header>
             <img class="icons" src="https://mars.algoritmika.org/uploads/2020/12/painter-161318_1280_0_1606929818.png"/>
